add_subdirectory(msgpack)

set(OST_IO_MSGPACK_HEADERS
msgpack.hpp
msgpack.h
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_HEADERS
${OST_IO_MSGPACK_MSGPACK_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_CPP11_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_CPP11_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_MSVC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_MSVC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SELECTION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SELECTION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LOGICAL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LOGICAL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_BOUNDS_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_BOUNDS_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_ITER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_ITER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_TR1_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_TR1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_CPP11_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_CPP11_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_DETAIL_HEADERS}
PARENT_SCOPE
)

