add_subdirectory(msgpack)

set(OST_IO_MSGPACK_HEADERS
msgpack.hpp
msgpack.h
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_HEADERS
${OST_IO_MSGPACK_MSGPACK_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DEBUG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DEBUG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS}
PARENT_SCOPE
)
