add_subdirectory(preprocessor)
add_subdirectory(v2)
add_subdirectory(predef)
add_subdirectory(adaptor)
add_subdirectory(v1)

set(OST_IO_MSGPACK_MSGPACK_HEADERS
unpack.hpp
util.h
version.hpp
versioning.hpp
unpack_define.h
gcc_atomic.h
object.h
iterator_decl.hpp
pack_decl.hpp
fbuffer_decl.hpp
pack_define.h
sbuffer_decl.hpp
zone.hpp
pack.h
zbuffer.h
unpack_exception.hpp
sbuffer.h
fbuffer.hpp
zbuffer.hpp
type.hpp
cpp_config_decl.hpp
vrefbuffer.h
version_master.h
zone.h
object_decl.hpp
iterator.hpp
meta_decl.hpp
preprocessor.hpp
parse_return.hpp
pack.hpp
object.hpp
version.h
cpp_config.hpp
pack_template.h
vrefbuffer.hpp
object_fwd.hpp
unpack.h
meta.hpp
gcc_atomic.hpp
unpack_decl.hpp
fbuffer.h
object_fwd_decl.hpp
sysdep.h
sbuffer.hpp
unpack_template.h
vrefbuffer_decl.hpp
predef.h
zbuffer_decl.hpp
zone_decl.hpp
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_CPP11_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_CPP11_HEADERS}
PARENT_SCOPE
)

# predef subdir
set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS}
PARENT_SCOPE
)

# preprocessor subdir
set(OST_IO_MSGPACK_PREPROCESSOR_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARRAY_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARRAY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS}
PARENT_SCOPE
)
