add_subdirectory(boost)
add_subdirectory(tr1)
add_subdirectory(cpp11)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS
ext.hpp
raw.hpp
adaptor_base.hpp
ext_decl.hpp
raw_decl.hpp
adaptor_base_decl.hpp
fixint.hpp
set.hpp
array_ref.hpp
fixint_decl.hpp
size_equal_only.hpp
array_ref_decl.hpp
float.hpp
size_equal_only_decl.hpp
bool.hpp
int.hpp
string.hpp
int_decl.hpp
carray.hpp
list.hpp
v4raw.hpp
char_ptr.hpp
map.hpp
v4raw_decl.hpp
check_container_size.hpp
map_decl.hpp
vector.hpp
check_container_size_decl.hpp
msgpack_tuple.hpp
vector_bool.hpp
msgpack_tuple_decl.hpp
vector_char.hpp
define.hpp
nil.hpp
vector_unsigned_char.hpp
define_decl.hpp
nil_decl.hpp
deque.hpp
pair.hpp
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_TR1_HEADERS}
PARENT_SCOPE
)
