add_subdirectory(language)
add_subdirectory(architecture)
add_subdirectory(detail)
add_subdirectory(os)
add_subdirectory(platform)
add_subdirectory(hardware)
add_subdirectory(library)
add_subdirectory(compiler)
add_subdirectory(other)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
compiler.h
make.h
other.h
version_number.h
language.h
architecture.h
os.h
platform.h
hardware.h
library.h
version.h
PARENT_SCOPE
)
