add_subdirectory(compiler)
add_subdirectory(library)
add_subdirectory(architecture)
add_subdirectory(hardware)
add_subdirectory(language)
add_subdirectory(other)
add_subdirectory(platform)
add_subdirectory(os)
add_subdirectory(detail)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
platform.h
make.h
library.h
version_number.h
language.h
version.h
os.h
compiler.h
architecture.h
hardware.h
other.h
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_COMPILER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LANGUAGE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OTHER_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_PLATFORM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_OS_BSD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_ARM_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_X86_AMD_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HARDWARE_SIMD_PPC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_ARCHITECTURE_X86_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_C_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_LIBRARY_STD_HEADERS}
PARENT_SCOPE
)

